[project]
name = "salem"
description = "Geoscientific data I/O and map projections"
authors = [{name = "Fabien Maussion", email = "fabien.maussion@uibk.ac.at"}]
license = {text = "BSD 3-clause"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pyproj",
    "joblib",
    "netCDF4",
    "pandas",
    "xarray",
]
dynamic = ["version"]

[tool.setuptools_scm]
fallback_version = "0.3.11"
version_file = "salem/_version.py"

[project.urls]
Homepage = "https://salem.readthedocs.io"
Documentation = "https://salem.readthedocs.io"
Source = "https://github.com/fmaussion/salem"
Tracker = "https://github.com/fmaussion/salem/issues"

[project.readme]
file = "README.rst"
content-type = "text/x-rst; charset=UTF-8"

[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
tests = [
    "cartopy>=0.21.1",
    "coverage>=7.6.1",
    "dask>=2023.5.0",
    "flake8>=5.0.4",
    "flake8-diff>=0.2.2",
    "geopandas>=0.13.2",
    "matplotlib>=3.7.5",
    "motionless>=1.3.3",
    "pytest>=8.3.5",
    "pytest-mpl>=0.17.0",
    "rasterio>=1.3.11",
    "scikit-image>=0.21.0",
    "shapely>=2.0.7",
]


[tool.setuptools]
platforms = ["any"]
include-package-data = true
license-files = ["LICENSE.rst"]

[tool.setuptools.packages.find]
exclude = ["docs"]
namespaces = false

[tool.distutils.bdist_wheel]
universal = 1

